# clean_text_rhoni

./: .gitignore  .pylintrc  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  publish.yml
dockerfiles/: Dockerfile.py310  Dockerfile.py311  Dockerfile.py38  Dockerfile.py39
docs/: CHANGELOG.md  Makefile  conf.py  example.ipynb  index.md  make.bat  requirements.txt
src/clean_text_rhoni/: __init__.py  base_clean_text.py  clean_text.py  clean_text_rhoni.py
tests/: cortazar_axolotl.txt  expected_clean_text.txt  expected_snake_case.txt  test_base_clean_text.py  test_clean_text.py  test_clean_text_rhoni.py
