[tool.poetry]
name = "clean_text_rhoni"
version = "0.1.0"
description = "package to clean and normalize text"
authors = ["rhoni"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
myst-nb = {version = ">=0.17.2", python = ">=3.8,<4.0"}
sphinx-autoapi = ">=2.1.1"
sphinx-rtd-theme = ">=1.2.2"
python-semantic-release = ">=8.0.8"
pylint = ">=3.0.1"
autopep8 = ">=2.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3
