[tool.poetry]
name = "clean_text_rhoni"
version = "0.1.10"
description = "package to clean and normalize text"
authors = ["rhoni"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
sphinx-autoapi = ">=2.1.1"
sphinx-rtd-theme = ">=1.2.2"
myst-parser = ">=2.0.0"
python-semantic-release = ">=8.0.8"
pylint = ">=3.0.1"
autopep8 = ">=2.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry && poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3
